--- a/images/router/simple.conf
+++ b/images/router/simple.conf
@@ -20,14 +20,9 @@ server {
     }
 
     # ...
-    location /static/ {
-        alias   /backer/static/;
+    location /build/ {
+        alias   /fronter/build/;
     }
-
-    # ...
-    location /uploads/ {
-        alias   /backer/media/;
-    }     
 
     # ...
     location ^~ /.well-known {
