--- a/images/router/ssl.conf
+++ b/images/router/ssl.conf
@@ -62,6 +62,11 @@ server {
         proxy_set_header   X-NginX-Proxy    true;
     }
 
+    # ...
+    location /build/ {
+        alias   /fronter/build/;
+    }
+
     location ^~ /.well-known {
         allow all;
         root  /router/letsencrypt/;
