--- a/books/prod/bootstrap.yml
+++ b/books/prod/bootstrap.yml
@@ -9,21 +9,48 @@ services:
       image: ${PROJECT}_storage
       network_mode: "host"
       environment:
+        # ...
         - POSTGRES_USER=${ADMIN_POSTGRES_USER}
         - POSTGRES_PASSWORD=${ADMIN_POSTGRES_PASSWORD}
+        # ..
+        - DB_NAME=${backer_DB_NAME}
+        - DB_USER=${backer_DB_USER}
+        - DB_PASSWORD=${backer_DB_PASSWORD}
+      # ......
       volumes:
+        # ...
         - var_lib_postgresql_data:/var/lib/postgresql/data
-        - ../../images/storage/bootstrap.sql:/docker-entrypoint-initdb.d/bootstrap.sql        
-
+        # ..
+        - ../../images/storage/bootstrap.sql.template:/docker-entrypoint-initdb.d/bootstrap.sql.template
+        - ../../images/storage/bootstrap.sh:/usr/local/bin/bootstrap.sh
+      # ..................................
+      command: /usr/local/bin/bootstrap.sh
 
   backer:
       image: ${PROJECT}_backer
       network_mode: "host" 
+      # ..........
       environment:
         - PROJECT=backer
         - WORKON_HOME=/backer/.env 
+      # ......
       volumes:
         - ../../images/backer/src:/backer
         - ../../images/backer/bootstrap.sh:/usr/local/bin/bootstrap.sh
-        # ...
-        - ../../images/backer/requirements/prod.txt:/tmp/requirements.txt
+        # ..
+        - ../../images/backer/requirements/prod.txt:/tmp/prod.txt
+        - ../../images/backer/requirements/dev.txt:/tmp/requirements.txt
+      # ..................................
+      command: /usr/local/bin/bootstrap.sh
+
+
+  fronter:
+      image: node:${NODE_TAG}
+      network_mode: "host" 
+      environment:
+        - PROJECT=fronter
+      volumes:
+        - ../../images/fronter/src:/fronter
+        - ../../images/fronter/bootstrap.sh:/usr/local/bin/bootstrap.sh
+      # .................................
+      command: /usr/local/bin/bootstrap.sh      
