--- a/books/prod/migrate.yml
+++ b/books/prod/migrate.yml
@@ -1,9 +1,16 @@
 version: '3'
 
+volumes:
+  var_lib_postgresql_data:
+
+networks:
+  netmain:
+    driver: bridge
+
 services:
 
   storage:
-      image: ${PROJECT}_storage
+      image: kubanoag_storage
       expose:
         - "5432"
       ports:
@@ -14,10 +21,32 @@ services:
         - var_lib_postgresql_data:/var/lib/postgresql/data
 
 
-volumes:
-  var_lib_postgresql_data:
-
-networks:
-  netmain:
-    driver: bridge
-   
+  backer:
+    image: ${PROJECT}_backer
+    tty: true
+    networks:
+      - netmain
+    depends_on:
+      - storage
+    environment:
+      - PROJECT=backer      
+      - PYTHONPATH=/backer
+      - WORKON_HOME=/backer/.env         
+      # ..
+      - FLASK_CONFIGURATION=development
+      - MIGRATION_MODE=true
+      # ..
+      - DB_SECRET_KEY=${backer_SECRET_KEY}
+      - DB_NAME=${backer_DB_NAME}
+      - DB_USER=${backer_DB_USER}
+      - DB_PASSWORD=${backer_DB_PASSWORD}
+      - DB_URL=storage
+      # ..
+      - FLASK_APP=app.py
+      - FLASK_DEBUG=1
+    # .....
+    volumes:
+      - ../../images/backer/src:/backer
+      - ../../images/backer/migrate.sh:/usr/local/bin/migrate.sh
+    # ................
+    command: /usr/local/bin/migrate.sh
